# gml-lint

./: Cargo.toml  README.md
crates/gml_cache/: Cargo.toml
crates/gml_cache/src/: lib.rs
crates/gml_diagnostics/: Cargo.toml
crates/gml_diagnostics/src/: lib.rs
crates/gml_lexer/: Cargo.toml
crates/gml_lexer/src/: lexer.rs  lib.rs  token.rs
crates/gml_lint/: Cargo.toml
crates/gml_lint/src/: main.rs
crates/gml_linter/: Cargo.toml
crates/gml_linter/src/: builtins.rs  checker.rs  context.rs  keywords.rs  lib.rs  rule.rs  semantic.rs  semantic_model.rs  semantic_visitor.rs  test_utils.rs  visitor.rs  walker.rs  walker_tests.rs
crates/gml_linter/src/cache/: mod.rs
crates/gml_linter/src/lexer/: lex.rs  mod.rs  token.rs
crates/gml_linter/src/parser/: ast.rs  mod.rs  parse.rs  repro_test.rs
crates/gml_linter/src/project/: mod.rs  proj.rs  yyp.rs
crates/gml_linter/src/rules/: gml001_uninitialized_var.rs  gml002_readonly_assignment.rs  gml003_unused_var.rs  gml004_unreachable_code.rs  gml005_missing_semicolon.rs  gml006_keyword_shadowing.rs  gml007_no_single_equals.rs  gml008_require_parentheses.rs  gml009_semicolon_before_branch.rs  gml010_check_has_return.rs  gml011_check_argument_counts.rs  gml012_warn_var_redeclaration.rs  gml013_unknown_function.rs  gml014_016_control_flow.rs  gml017_018_constructors.rs  gml020_type_mismatch.rs  gml021_invalid_assignment.rs  gml022_unknown_identifier.rs  gml023_uninitialized_global.rs  gml024_simplify_undefined_check.rs  gml025_unsupported_ternary.rs  gml026_uncaptured_closure_var.rs  gml027_redundant_comparison.rs  mod.rs
crates/gml_linter/src/semantic/: db.rs  infer.rs  mod.rs  narrow.rs  scope.rs  types.rs
crates/gml_parser/: Cargo.toml
crates/gml_parser/src/: ast.rs  lib.rs  parser.rs  repro_test.rs
crates/gml_project/: Cargo.toml
crates/gml_project/src/: lib.rs  project.rs
crates/gml_semantic/: Cargo.toml
crates/gml_semantic/src/: db.rs  infer.rs  narrow.rs  scope.rs  types.rs
