[workspace]
resolver = "2"
members = [
    "crates/gml_lint",
    "crates/gml_linter",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["codename-B"]
rust-version = "1.75"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"

# Performance
rayon = "1.11"
dashmap = "6.1"
ahash = { version = "0.8", features = ["serde"] }
smallvec = "1.15"
rustc-hash = "2.1"

# Testing
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
