[package]
name = "gml_lint"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gml-lint"
path = "src/main.rs"

[dependencies]
gml_linter = { path = "../gml_linter" }

clap.workspace = true
colored.workspace = true
rayon.workspace = true
anyhow.workspace = true
rustc-hash = "2.1"
jwalk = "0.8"
ignore = "0.4"
crossbeam = "0.8"
memmap2 = "0.9"
dashmap.workspace = true
