[package]
name = "gml_linter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gml_lexer = { path = "../gml_lexer" }
gml_parser = { path = "../gml_parser" }
gml_diagnostics = { path = "../gml_diagnostics" }
smallvec.workspace = true
rustc-hash.workspace = true
gml_semantic = { version = "0.1.0", path = "../gml_semantic" }

[dev-dependencies]
pretty_assertions.workspace = true

