[package]
name = "gml_linter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Dependencies from merged crates
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jwalk = "0.8"
glob = "0.3"
regex = "1.12.2"

# Original dependencies
smallvec.workspace = true
rustc-hash.workspace = true
memchr = "2.7.6"
memmap2 = "0.9"
dashmap.workspace = true
rayon.workspace = true
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3.24.0"
