[package]
name = "gml_project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
gml_diagnostics = { path = "../gml_diagnostics" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jwalk = "0.8"
glob = "0.3"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3.24.0"
