[package]
name = "gml_semantic"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use the same salsa revision as ruff/ty for compatibility/referencing
# salsa removed temporarily to unblock build
rustc-hash = "1.1.0"
smallvec = "1.11"
thiserror = "1.0"
anyhow = "1.0"
gml_parser = { version = "0.1.0", path = "../gml_parser" }

[dev-dependencies]
